--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,8 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.luz {
+    box-shadow: -3px 8px 29px 14px rgba(255, 255, 255, 0.52);
+    -webkit-box-shadow: -3px 8px 29px 14px rgba(255, 255, 255, 0.52);
+    -moz-box-shadow: -3px 8px 29px 14px rgba(255, 255, 255, 0.52);
+}
